dataset1235/2025-2/1153765216/users/3894411613/executions/2747719322_3691284457.log
== SUBMISSION (2025-08-26 14:34:20)
-- CODE: 
n1 = float(input("nota 1: "))
n2 = float(input("nota 2: "))
n3 = float(input("nota 3: "))
n4 = float(input("nota 4: "))

p1 = 1 
p2 = 2
p3 = 3
p4 = 4

media = (n1*p1 + n2*p2 + n3*p3 + n4*p4) / (p1+p2+p3+p4)
print(round(media , 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
nota 1: nota 2: nota 3: nota 4: 7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
nota 1: nota 2: nota 3: nota 4: 8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
nota 1: nota 2: nota 3: nota 4: 7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
nota 1: nota 2: nota 3: nota 4: 6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
nota 1: nota 2: nota 3: nota 4: 30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
nota 1: nota 2: nota 3: nota 4: 7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 14:19:25)
-- CODE: 
n1 = float(input("nota 1: "))
n2 = float(input("nota 2: "))
n3 = float(input("nota 3: "))
n4 = float(input("nota 4: "))

peso1 = 1 
peso2 = 2
peso3 = 3
peso4 = 4
media = print(round(n1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4 , 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    media = print(round(n1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4 , 2))
                                   ^^^^^
NameError: name 'nota2' is not defined
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    media = print(round(n1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4 , 2))
                                   ^^^^^
NameError: name 'nota2' is not defined
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    media = print(round(n1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4 , 2))
                                   ^^^^^
NameError: name 'nota2' is not defined
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    media = print(round(n1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4 , 2))
                                   ^^^^^
NameError: name 'nota2' is not defined
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    media = print(round(n1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4 , 2))
                                   ^^^^^
NameError: name 'nota2' is not defined
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    media = print(round(n1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4 , 2))
                                   ^^^^^
NameError: name 'nota2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 14:22:14)
-- CODE: 
n1 = float(input("nota 1: "))
n2 = float(input("nota 2: "))
n3 = float(input("nota 3: "))
n4 = float(input("nota 4: "))

p1 = 1 
p2 = 2
p3 = 3
p4 = 4
media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)
print(round(media , 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
nota 1: nota 2: nota 3: nota 4: 79.36
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
nota 1: nota 2: nota 3: nota 4: 82.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
nota 1: nota 2: nota 3: nota 4: 70.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
nota 1: nota 2: nota 3: nota 4: 67.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
nota 1: nota 2: nota 3: nota 4: 300.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
nota 1: nota 2: nota 3: nota 4: 78.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 14:18:00)
-- CODE: 
n1 = float(input("nota 1: "))
n2 = float(input("nota 2: "))
n3 = float(input("nota 3: "))
n4 = float(input("nota 4: "))

peso = (1, 2, 3, 4)
print(round(n1*peso1, nota2*peso2, nota3*peso3, nota4*peso4 , 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(n1*peso1, nota2*peso2, nota3*peso3, nota4*peso4 , 2))
                   ^^^^^
NameError: name 'peso1' is not defined. Did you mean: 'peso'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(n1*peso1, nota2*peso2, nota3*peso3, nota4*peso4 , 2))
                   ^^^^^
NameError: name 'peso1' is not defined. Did you mean: 'peso'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(n1*peso1, nota2*peso2, nota3*peso3, nota4*peso4 , 2))
                   ^^^^^
NameError: name 'peso1' is not defined. Did you mean: 'peso'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(n1*peso1, nota2*peso2, nota3*peso3, nota4*peso4 , 2))
                   ^^^^^
NameError: name 'peso1' is not defined. Did you mean: 'peso'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(n1*peso1, nota2*peso2, nota3*peso3, nota4*peso4 , 2))
                   ^^^^^
NameError: name 'peso1' is not defined. Did you mean: 'peso'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(n1*peso1, nota2*peso2, nota3*peso3, nota4*peso4 , 2))
                   ^^^^^
NameError: name 'peso1' is not defined. Did you mean: 'peso'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
